--- a/webapp/Views/Shared/_Layout.cshtml
+++ b/webapp/Views/Shared/_Layout.cshtml
@@ -22,8 +22,29 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Services
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="/Services/Category/content-creation">Content Creation</a></li>
+                                <li><a class="dropdown-item" href="/Services/Category/podcasting-media">Podcasting & Media</a></li>
+                                <li><a class="dropdown-item" href="/Services/Category/cosmetology">Cosmetology</a></li>
+                                <li><a class="dropdown-item" href="/Services/Category/tattooing">Tattooing</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="/Services">All Services</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/Booking">Booking</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="HealthCheck">Health Status</a>
                         </li>
                     </ul>
                 </div>
